# ARC-Tools

./: .gitignore  agent.py  analyze_task_196.py  generate_task_files.py  generate_task_files_251_350.py  main.py  prompt.py  pyproject.toml  solve_task.py  verify.py  verify_task_196.py  view_task.py
arc_tools/: grid.py  plot.py  utils.py
evaluation_tasks_v1/: TASK_158_SOLUTION.md  TASK_169_SOLUTION.md  TASK_191_SOLUTION.md  helper.py  task_1.py  task_10.py  task_100.py  task_101.py  task_102.py  task_103.py  task_105.py  task_106.py  task_107.py  task_109.py  task_11.py  task_110.py  task_111.py  task_114.py  task_115.py  task_116.py  task_117.py  task_118.py  task_119.py  task_12.py  task_120.py  task_121.py  task_122.py  task_123.py  task_124.py  task_125.py  task_126.py  task_127.py  task_128.py  task_129.py  task_13.py  task_130.py  task_131.py  task_132.py  task_133.py  task_134.py  (+345 more)
solved_codes/: task_1.py
workspace/: helper.py
