[project]
name = "arc_tools"
version = "0.1.0"
description = "Tools for the ARC dataset"
authors = [
  {name = "மனோஜ்குமார் பழனிச்சாமி"}
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arc_tools*"]
exclude = ["evaluation_tasks*", "tests*"]

[tool.mypy]
disable_error_code = "import"

